[tool.black]
line-length = 79
target_version = ['py37']

[tool.isort]
multi_line_output=3
line_length=79

[tool.poetry]
name = "fit3155"
version = "0.1.0"
description = "FIT3155 - Advanced data structures and algorithms S2 2019"
authors = ["Dylan Pinn <me@dylanpinn.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = { version = "*", allows-prereleases = true }
flake8 = "^3.7"
isort = "^4.3"
pytest = "^5.2"
pytest-cov = "^2.8"
tox = "^3.14"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
